# diffstory

./: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.claude/: settings.json
.claude/skills/install/: SKILL.md
assets/: template.html  viewer.css  viewer.js
plans/: pr-comments.md  v1-design.md
skills/diffstory/: SKILL.md  diffstory
src/: codec.rs  comments.rs  diff_parser.rs  github.rs  lib.rs  main.rs  matcher.rs  model.rs
src/html/: mod.rs  template.rs
tests/fixtures/: sample.diff  sample.json
