[package]
name = "diffstory"
version = "0.1.0"
edition = "2021"
description = "Organize PR diffs into narrative stories for reviewers"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
comrak = "0.34"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
